Added a new field to User that stores the number of user a user follows

--- a/project4/network/templates/network/user.html
+++ b/project4/network/templates/network/user.html
@@ -12,7 +12,7 @@
             </div>
         </div>
 
-        {% for post in w_user.creator.all %}
+        {% for post in posts %}
             <div class="post-container card">
                 <div class="form-class card-body">
                     <div><strong><a href="{% url "user" post.creator %}">{{ post.creator }}</a></strong></div>
@@ -33,5 +33,22 @@
                 No posts yet
             </div>
         {% endfor %}
+        <div class="pagination">
+            <span class="step-links">
+                {% if posts.has_previous %}
+                    <a href="?page=1">&laquo; first</a>
+                    <a href="?page={{ posts.previous_page_number }}">previous</a>
+                {% endif %}
+
+                <span class="current">
+                    Page {{ posts.number }} of {{ posts.paginator.num_pages }}.
+                </span>
+
+                {% if posts.has_next %}
+                    <a href="?page={{ posts.next_page_number }}">next</a>
+                    <a href="?page={{ posts.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
     </div>
 {% endblock %}
