--- a/project4/network/templates/network/user.html
+++ b/project4/network/templates/network/user.html
@@ -6,6 +6,7 @@
         <div class="top container-fluid">
             <div class='row'>
                 <div id='head' class='right clo-sm'>{{ w_user.username }}</div>
+                <div class='col-sm follow'>{{ w_user.num_people_followed }} Following</div>
 
                 <div class='left col-sm' id='tot'><span id='count'>{{ w_user.followed_by.count }}</span> Follower(s)</div>
                 {% if w_user.username != user.username %} <span id='follow' class='follow '><a href='' style='color: white; text-decoration: none;'>{% if follows %}Unfollow{% else %}Follow{% endif %}</a></span>{% endif %}
